# ast-outline

./: AGENTS.md  Cargo.toml  LICENSE  README.md
Formula/: ast-outline.rb
src/: core.rs  main.rs
src/adapters/: go.rs  markdown.rs  python.rs  typescript.rs
src/hook/: claude_code.rs  gemini.rs  mod.rs
src/installers/: claude_code.rs  json_hook.rs
wiki/: architecture.md
